--- a/style.css
+++ b/style.css
@@ -1,11 +1,8 @@
 body {
-    background-color: #d0e4fe;
 }
 h1 {
-    color: orange;
-    text-align: center;
 }
 p {
-    font-family: "Times New Roman";
-    font-size: 20px;
+    font-family: "Menlo";
+    font-size: 12px;
 }
