--- a/style.css
+++ b/style.css
@@ -17,6 +17,12 @@ body {
     font-size: 0.8em;
 }
 
+.menu {
+    list-style-type: none;
+    margin: 1.6em;
+    padding: 0;
+}
+
 .content {
 }
 
