--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Menlo", "Bitstream Vera Sans Mono", "Courier New";
+    font-family: Cambria;
     margin-left: 20%;
     margin-right: 20%;
 }
@@ -17,15 +17,56 @@ body {
     font-size: 0.8em;
 }
 
-.menu {
-    list-style-type: none;
-    margin: 1.6em;
-    padding: 0;
+.nav-bar {
+    display: block;
+    margin: 1em;
 }
 
-.menu-item {
+.nav-bar ul {
+    list-style: none;
+    margin: 0;
+    padding-left: 0;
+}
+
+.nav-bar li {
     display: inline;
-    margin: 1em;
+    float: center;
+    padding: 1em;
+    position: relative;
+}
+  
+.nav-bar li a {
+    text-decoration: none;
+    display: inline-block;
+    color: black;
+}
+
+.nav-bar li:hover {
+    cursor: pointer;
+}
+
+.nav-bar ul li ul {
+    visibility: hidden;
+    min-width: 150px;
+    position: absolute;
+    text-align: left;
+    left: 0;
+    z-index: 999;
+}
+
+.nav-bar ul li:hover > ul,
+.nav-bar ul li ul:hover {
+    visibility: visible;
+}
+
+.nav-bar ul li ul li {
+    clear: both;
+    padding: 0 0 0 1em;
+    width: 100%;
+}
+
+.nav-bar ul li ul li a:hover {
+    color: red;
 }
 
 .content {
@@ -48,4 +89,10 @@ body {
 
 p {
     font-size: 1em;
+}
+
+pre {
+    font-family: Menlo, "Courier New";
+    background: lightgray;
+    padding: 1em;
 }
