--- a/style.css
+++ b/style.css
@@ -6,11 +6,18 @@ body {
 
 .header {
     text-align: center;
+    margin-top: 1.2em;
     margin-bottom: 3em;
 }
 
 .header-title {
     font-size: 3em;
+    color: black;
+    text-decoration: none;
+}
+
+.header-title:hover {
+    text-decoration: underline;
 }
 
 .header-tagline {
@@ -54,6 +61,10 @@ body {
     z-index: 999;
 }
 
+.nav-bar ul li a:hover {
+    color: red;
+}
+
 .nav-bar ul li:hover > ul,
 .nav-bar ul li ul:hover {
     visibility: visible;
@@ -66,6 +77,7 @@ body {
 }
 
 .nav-bar ul li ul li a:hover {
+    text-decoration: none;
     color: red;
 }
 
@@ -95,4 +107,10 @@ pre {
     font-family: Menlo, "Courier New";
     background: lightgray;
     padding: 1em;
+}
+
+.footer {
+    text-align: center;
+    font-size: 0.8em;
+    margin-bottom: 3em;
 }
