--- a/nanosite_gen/templates/footer-template.html
+++ b/nanosite_gen/templates/footer-template.html
@@ -2,5 +2,6 @@
 AUTHOR: Author of site. -->
 
 <div class="footer">
+  <div>Powered by <a href="https://github.com/qema/nanosite">nanosite</a>.</div>
   Copyright $AUTHOR$.
 </div>
