--- a/nanosite_gen/templates/main-template.html
+++ b/nanosite_gen/templates/main-template.html
@@ -3,7 +3,9 @@ SITE_URL - URL of site (with trailing slash)
 TITLE - Title of site
 HEADER - Header bar (will be generated from header-template.html)
 CONTENT - Main content (will be generated from post-template.html)
-FOOTER - Footer bar (will be generated from footer-template.html) -->
+NAV_LINK - Context-based address to link to (depending on the page)
+NAV_TEXT - The text of the NAV_LINK
+FOOTER - Footer bar (will be generated from footer-template.html)  -->
 
 <!DOCTYPE html>
 <html>
@@ -16,6 +18,9 @@ FOOTER - Footer bar (will be generated from footer-template.html) -->
   $HEADER$
   <div class="content">
     $CONTENT$
+  </div>
+  <div class="bottom-nav">
+    <a href="$NAV_LINK$">$NAV_TEXT$</a>
   </div>
   $FOOTER$
 </body>
